Jinja2/Gen/JinjaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:/personal/dbt-helper/Jinja2/Gen/JinjaParser.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class JinjaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TEXT=1, OPEN_EXPR=2, OPEN_STMT=3, OPEN_COMMENT=4, WS_EXPR=5, SET=6, ID=7, 
		INT=8, ESC=9, STRING=10, PLUS=11, MINUS=12, MUL=13, DIV=14, EQUALS=15, 
		LPARAN=16, RPARAN=17, COMMA=18, WS_STMT=19, IF=20, FOR=21, END=22, EQ=23, 
		MACRO=24, END_MACRO=25, COMMENT_TEXT=26, CLOSE_EXPR=27, CLOSE_STMT=28, 
		CLOSE_COMMENT=29;
	public const int
		RULE_template = 0, RULE_macro_template = 1, RULE_expression = 2, RULE_expression_body = 3, 
		RULE_statement = 4, RULE_statement_body = 5, RULE_macro = 6, RULE_params = 7, 
		RULE_param = 8, RULE_boolean_expression = 9, RULE_functionCall = 10, RULE_argList = 11, 
		RULE_comment = 12, RULE_text = 13;
	public static readonly string[] ruleNames = {
		"template", "macro_template", "expression", "expression_body", "statement", 
		"statement_body", "macro", "params", "param", "boolean_expression", "functionCall", 
		"argList", "comment", "text"
	};

	private static readonly string[] _LiteralNames = {
		null, null, "'{{'", "'{%'", "'{#'", null, "'set'", null, null, null, null, 
		"'+'", "'-'", "'*'", "'/'", "'='", "'('", "')'", "','", null, "'if'", 
		"'for'", "'end'", "'=='", "'macro'", "'endmacro'", null, "'}}'", "'%}'", 
		"'#}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TEXT", "OPEN_EXPR", "OPEN_STMT", "OPEN_COMMENT", "WS_EXPR", "SET", 
		"ID", "INT", "ESC", "STRING", "PLUS", "MINUS", "MUL", "DIV", "EQUALS", 
		"LPARAN", "RPARAN", "COMMA", "WS_STMT", "IF", "FOR", "END", "EQ", "MACRO", 
		"END_MACRO", "COMMENT_TEXT", "CLOSE_EXPR", "CLOSE_STMT", "CLOSE_COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "JinjaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static JinjaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public JinjaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public JinjaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TemplateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(JinjaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MacroContext[] macro() {
			return GetRuleContexts<MacroContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public MacroContext macro(int i) {
			return GetRuleContext<MacroContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TemplateContext template() {
		TemplateContext _localctx = new TemplateContext(Context, State);
		EnterRule(_localctx, 0, RULE_template);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 35;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 30L) != 0)) {
				{
				State = 33;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 28;
					text();
					}
					break;
				case 2:
					{
					State = 29;
					expression();
					}
					break;
				case 3:
					{
					State = 30;
					statement();
					}
					break;
				case 4:
					{
					State = 31;
					macro();
					}
					break;
				case 5:
					{
					State = 32;
					comment();
					}
					break;
				}
				}
				State = 37;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 38;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Macro_templateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public TextContext[] text() {
			return GetRuleContexts<TextContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public TextContext text(int i) {
			return GetRuleContext<TextContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext[] comment() {
			return GetRuleContexts<CommentContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommentContext comment(int i) {
			return GetRuleContext<CommentContext>(i);
		}
		public Macro_templateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_macro_template; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMacro_template(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Macro_templateContext macro_template() {
		Macro_templateContext _localctx = new Macro_templateContext(Context, State);
		EnterRule(_localctx, 2, RULE_macro_template);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 46;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					State = 44;
					ErrorHandler.Sync(this);
					switch (TokenStream.LA(1)) {
					case TEXT:
						{
						State = 40;
						text();
						}
						break;
					case OPEN_EXPR:
						{
						State = 41;
						expression();
						}
						break;
					case OPEN_STMT:
						{
						State = 42;
						statement();
						}
						break;
					case OPEN_COMMENT:
						{
						State = 43;
						comment();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				State = 48;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,3,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_EXPR() { return GetToken(JinjaParser.OPEN_EXPR, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext expression_body() {
			return GetRuleContext<Expression_bodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_EXPR() { return GetToken(JinjaParser.CLOSE_EXPR, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 4, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			Match(OPEN_EXPR);
			State = 50;
			expression_body(0);
			State = 51;
			Match(CLOSE_EXPR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Expression_bodyContext : ParserRuleContext {
		public Expression_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression_body; } }
	 
		public Expression_bodyContext() { }
		public virtual void CopyFrom(Expression_bodyContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EqINTContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INT() { return GetToken(JinjaParser.INT, 0); }
		public EqINTContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqINT(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqFunctionCallContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public EqFunctionCallContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqAddContext : Expression_bodyContext {
		public Expression_bodyContext left;
		public IToken @operator;
		public Expression_bodyContext right;
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext[] expression_body() {
			return GetRuleContexts<Expression_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext expression_body(int i) {
			return GetRuleContext<Expression_bodyContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode PLUS() { return GetToken(JinjaParser.PLUS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MINUS() { return GetToken(JinjaParser.MINUS, 0); }
		public EqAddContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqAdd(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqAssignContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SET() { return GetToken(JinjaParser.SET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(JinjaParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode EQUALS() { return GetToken(JinjaParser.EQUALS, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext expression_body() {
			return GetRuleContext<Expression_bodyContext>(0);
		}
		public EqAssignContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqAssign(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqIDContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(JinjaParser.ID, 0); }
		public EqIDContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqID(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqMulContext : Expression_bodyContext {
		public Expression_bodyContext left;
		public IToken @operator;
		public Expression_bodyContext right;
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext[] expression_body() {
			return GetRuleContexts<Expression_bodyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext expression_body(int i) {
			return GetRuleContext<Expression_bodyContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MUL() { return GetToken(JinjaParser.MUL, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode DIV() { return GetToken(JinjaParser.DIV, 0); }
		public EqMulContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqMul(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqParanContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARAN() { return GetToken(JinjaParser.LPARAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Expression_bodyContext expression_body() {
			return GetRuleContext<Expression_bodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARAN() { return GetToken(JinjaParser.RPARAN, 0); }
		public EqParanContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqParan(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class EqStringContext : Expression_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(JinjaParser.STRING, 0); }
		public EqStringContext(Expression_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqString(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Expression_bodyContext expression_body() {
		return expression_body(0);
	}

	private Expression_bodyContext expression_body(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		Expression_bodyContext _localctx = new Expression_bodyContext(Context, _parentState);
		Expression_bodyContext _prevctx = _localctx;
		int _startState = 6;
		EnterRecursionRule(_localctx, 6, RULE_expression_body, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				{
				_localctx = new EqParanContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 54;
				Match(LPARAN);
				State = 55;
				expression_body(0);
				State = 56;
				Match(RPARAN);
				}
				break;
			case 2:
				{
				_localctx = new EqAssignContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 58;
				Match(SET);
				State = 59;
				Match(ID);
				State = 60;
				Match(EQUALS);
				State = 61;
				expression_body(5);
				}
				break;
			case 3:
				{
				_localctx = new EqIDContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 62;
				Match(ID);
				}
				break;
			case 4:
				{
				_localctx = new EqINTContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 63;
				Match(INT);
				}
				break;
			case 5:
				{
				_localctx = new EqStringContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 64;
				Match(STRING);
				}
				break;
			case 6:
				{
				_localctx = new EqFunctionCallContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 65;
				functionCall();
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 76;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 74;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
					case 1:
						{
						_localctx = new EqAddContext(new Expression_bodyContext(_parentctx, _parentState));
						((EqAddContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression_body);
						State = 68;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 69;
						((EqAddContext)_localctx).@operator = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((EqAddContext)_localctx).@operator = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 70;
						((EqAddContext)_localctx).right = expression_body(8);
						}
						break;
					case 2:
						{
						_localctx = new EqMulContext(new Expression_bodyContext(_parentctx, _parentState));
						((EqMulContext)_localctx).left = _prevctx;
						PushNewRecursionContext(_localctx, _startState, RULE_expression_body);
						State = 71;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 72;
						((EqMulContext)_localctx).@operator = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==MUL || _la==DIV) ) {
							((EqMulContext)_localctx).@operator = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 73;
						((EqMulContext)_localctx).right = expression_body(7);
						}
						break;
					}
					} 
				}
				State = 78;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_STMT() { return GetToken(JinjaParser.OPEN_STMT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Statement_bodyContext statement_body() {
			return GetRuleContext<Statement_bodyContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_STMT() { return GetToken(JinjaParser.CLOSE_STMT, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 8, RULE_statement);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 79;
			Match(OPEN_STMT);
			State = 80;
			statement_body();
			State = 81;
			Match(CLOSE_STMT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Statement_bodyContext : ParserRuleContext {
		public Statement_bodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement_body; } }
	 
		public Statement_bodyContext() { }
		public virtual void CopyFrom(Statement_bodyContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EqIFContext : Statement_bodyContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IF() { return GetToken(JinjaParser.IF, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public Boolean_expressionContext boolean_expression() {
			return GetRuleContext<Boolean_expressionContext>(0);
		}
		public EqIFContext(Statement_bodyContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqIF(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Statement_bodyContext statement_body() {
		Statement_bodyContext _localctx = new Statement_bodyContext(Context, State);
		EnterRule(_localctx, 10, RULE_statement_body);
		try {
			_localctx = new EqIFContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 83;
			Match(IF);
			State = 84;
			boolean_expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MacroContext : ParserRuleContext {
		public MacroContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_macro; } }
	 
		public MacroContext() { }
		public virtual void CopyFrom(MacroContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class EqMacroContext : MacroContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] OPEN_STMT() { return GetTokens(JinjaParser.OPEN_STMT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode OPEN_STMT(int i) {
			return GetToken(JinjaParser.OPEN_STMT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode MACRO() { return GetToken(JinjaParser.MACRO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode ID() { return GetToken(JinjaParser.ID, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LPARAN() { return GetToken(JinjaParser.LPARAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RPARAN() { return GetToken(JinjaParser.RPARAN, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] CLOSE_STMT() { return GetTokens(JinjaParser.CLOSE_STMT); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode CLOSE_STMT(int i) {
			return GetToken(JinjaParser.CLOSE_STMT, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Macro_templateContext macro_template() {
			return GetRuleContext<Macro_templateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode END_MACRO() { return GetToken(JinjaParser.END_MACRO, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ParamsContext @params() {
			return GetRuleContext<ParamsContext>(0);
		}
		public EqMacroContext(MacroContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqMacro(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MacroContext macro() {
		MacroContext _localctx = new MacroContext(Context, State);
		EnterRule(_localctx, 12, RULE_macro);
		int _la;
		try {
			_localctx = new EqMacroContext(_localctx);
			EnterOuterAlt(_localctx, 1);
			{
			State = 86;
			Match(OPEN_STMT);
			State = 87;
			Match(MACRO);
			State = 88;
			Match(ID);
			State = 89;
			Match(LPARAN);
			State = 91;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==ID) {
				{
				State = 90;
				@params();
				}
			}

			State = 93;
			Match(RPARAN);
			State = 94;
			Match(CLOSE_STMT);
			State = 95;
			macro_template();
			State = 96;
			Match(OPEN_STMT);
			State = 97;
			Match(END_MACRO);
			State = 98;
			Match(CLOSE_STMT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ParamsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext[] param() {
			return GetRuleContexts<ParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ParamContext param(int i) {
			return GetRuleContext<ParamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COMMA() { return GetTokens(JinjaParser.COMMA); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMA(int i) {
			return GetToken(JinjaParser.COMMA, i);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_params; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IJinjaParserVisitor<TResult> typedVisitor = visitor as IJinjaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParams(this);
			else return visitor.VisitChildren(this);
		}
	}
